# certified-massage

./: .gitignore  .gitmessage.txt  CONTRIBUTING.md  README.md  commitlint.config.cjs  package.json
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: custom.yml
.github/workflows/: ci.yml
apps/crawler/: .env.example  pyproject.toml
apps/crawler/src/anmawon_crawler/: __init__.py  cli.py  crawler.py  geocode.py  models.py  normalize.py  probe.py  settings.py  storage.py  validate.py
apps/crawler/tests/: test_crawler.py  test_geocode.py  test_normalize.py  test_probe.py  test_validate.py
apps/web/: .env.local.example  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: KakaoMap.tsx  ShopExplorer.tsx
apps/web/src/lib/: dataset.ts  regions.ts  types.ts
apps/web/src/types/: kakao.d.ts
data/processed/: shops.geo.json
docs/: crawling.md  data-model.md  roadmap.md  workflow.md
